@@ -158,6 +158,7 @@ enum _eHardwareTypes {
 	HTYPE_RAVEn,	    		//76
 	HTYPE_S0SmartMeterTCP,		//77
 	HTYPE_DenkoviSmartdenLan,	//78
+	HTYPE_AccuWeather,			//79
 	HTYPE_END
 };
 
