@@ -19,6 +19,7 @@
 #include "../hardware/EnOceanESP3.h"
 #include "../hardware/Wunderground.h"
 #include "../hardware/ForecastIO.h"
+#include "../hardware/AccuWeather.h"
 #include "../hardware/Kodi.h"
 #include "../hardware/LogitechMediaServer.h"
 #include "../hardware/MySensorsBase.h"
@@ -1070,6 +1071,7 @@ namespace http {
 			else if (
 				(htype == HTYPE_Wunderground) ||
 				(htype == HTYPE_ForecastIO) ||
+				(htype == HTYPE_AccuWeather) ||
 				(htype == HTYPE_ICYTHERMOSTAT) ||
 				(htype == HTYPE_TOONTHERMOSTAT) ||
 				(htype == HTYPE_AtagOne) ||
@@ -1322,6 +1324,7 @@ namespace http {
 			else if (
 				(htype == HTYPE_Wunderground) ||
 				(htype == HTYPE_ForecastIO) ||
+				(htype == HTYPE_AccuWeather) ||
 				(htype == HTYPE_ICYTHERMOSTAT) ||
 				(htype == HTYPE_TOONTHERMOSTAT) ||
 				(htype == HTYPE_AtagOne) ||
@@ -7432,6 +7435,15 @@ namespace http {
 						else if (pHardware->HwdType == HTYPE_ForecastIO)
 						{
 							CForecastIO *pWHardware = reinterpret_cast<CForecastIO*>(pHardware);
+							std::string forecast_url = pWHardware->GetForecastURL();
+							if (forecast_url != "")
+							{
+								root["result"][ii]["forecast_url"] = base64_encode((const unsigned char*)forecast_url.c_str(), forecast_url.size());
+							}
+						}
+						else if (pHardware->HwdType == HTYPE_AccuWeather)
+						{
+							CAccuWeather *pWHardware = reinterpret_cast<CAccuWeather*>(pHardware);
 							std::string forecast_url = pWHardware->GetForecastURL();
 							if (forecast_url != "")
 							{
