@@ -409,7 +409,7 @@ define(['app'], function (app) {
                     }
                 });
             }
-            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0))
+            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0)||(text.indexOf("AccuWeather") >= 0))
             {
                 var apikey=$("#hardwarecontent #divunderground #apikey").val();
                 if (apikey=="")
@@ -1008,7 +1008,7 @@ define(['app'], function (app) {
                      }
                 });
             }
-            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0))
+            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0)||(text.indexOf("AccuWeather") >= 0))
             {
                 var apikey=$("#hardwarecontent #divunderground #apikey").val();
                 if (apikey=="")
@@ -4139,7 +4139,7 @@ define(['app'], function (app) {
                             $("#hardwarecontent #hardwareparamsremote #tcpport").val(data["Port"]);
                             $("#hardwarecontent #hardwareparamslogin #password").val(data["Password"]);
                         }
-                        else if ((data["Type"].indexOf("Underground") >= 0)||(data["Type"].indexOf("Forecast") >= 0)) {
+                        else if ((data["Type"].indexOf("Underground") >= 0)||(data["Type"].indexOf("Forecast") >= 0)||(data["Type"].indexOf("AccuWeather") >= 0)) {
                             $("#hardwarecontent #hardwareparamsunderground #apikey").val(data["Username"]);
                             $("#hardwarecontent #hardwareparamsunderground #location").val(data["Password"]);
                         }
@@ -4367,7 +4367,7 @@ define(['app'], function (app) {
                 $("#hardwarecontent #divhttppoller").show();
                 $("#hardwarecontent #hardwareparamshttp #refresh").val(300);
             }
-            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0))
+            else if ((text.indexOf("Underground") >= 0)||(text.indexOf("Forecast") >= 0)||(text.indexOf("AccuWeather") >= 0))
             {
                 $("#hardwarecontent #divserial").hide();
                 $("#hardwarecontent #divremote").hide();
