@@ -1,4 +1,5 @@
 Version 3.xxxx (June xx 2016)
+- Implemented: AccuWeather support
 - Implemented: Atag One Thermostat support
 - Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
 - Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists
